# prime_factorization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  elliptic_curve.cpp  elliptic_curve.h  factorization.cpp  factorization.h  helper.cpp  helper.h  main.cpp  test_numbers.cpp  test_numbers.h  testzahlen.cpp  trial_division.cpp  trial_division.h
